# rust-htmx

./: Cargo.toml
src/: lib.rs  main.rs
src/client/: book_client.rs  mod.rs
src/routes/: book.rs  mod.rs
src/support/: renderer.rs
templates/: book_list.html  book_row.html  index.html
