[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2021"


[lib]
name = "app"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
askama = "0.12.1"
mongodb = "3.0.1"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum-embed = "0.1.0"
rust-embed="8.4.0"